Fix up resource card spacing more

--- a/hlx_statics/styles.css
+++ b/hlx_statics/styles.css
@@ -348,6 +348,7 @@ footer .footer-horizontal {
 }
 
 div.resource-cards-left > a.resource-card-large-container-inner {
+  width: 100%;
   margin-right: 0 !important;
 }
 
